# kmtricks

include/kmtricks/: plugin_manager.hpp  task.hpp
plugins/: CMakeLists.txt
plugins/BlockCompressor/: BlockCompressor.cpp  BlockCompressor.def  BlockCompressor.h  BlockCompressorLZMA.cpp  BlockCompressorLZMA.h  BlockDecompressor.cpp  BlockDecompressor.h  BlockDecompressorLZMA.cpp  BlockDecompressorLZMA.h  CMakeLists.txt  ConfigurationLiterate.cpp  ConfigurationLiterate.h  README.md  benchmark.cpp  example.cfg  mainBlockCompressor.cpp  mainBlockDecompressor.cpp  sdsl_cmakelists.txt
plugins/BlockCompressor/LZMA/: BlockCompressorLZMA.cpp  BlockCompressorLZMA.h  BlockDecompressorLZMA.cpp  BlockDecompressorLZMA.h  mainBlockCompressorLZMA.cpp  mainBlockDecompressorLZMA.cpp
plugins/BlockCompressor/ZSTD/: BlockCompressorZSTD.cpp  BlockCompressorZSTD.h  BlockDecompressorZSTD.cpp  BlockDecompressorZSTD.h  mainBlockCompressorZSTD.cpp  mainBlockDecompressorZSTD.cpp
